# websight-analyzer-ai-public

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  quality.yml
client/: mcp_client.py
core/: __init__.py  advanced_analysis.py  automated_qa_orchestrator.py  browser_controller.py  element_detection_extensions.py  generic_crawler.py  integrated_web_analyzer.py  legacy_mcp_adapter.py  mcp_playwright_integration.py  output_extensions.py  playwright_web_elements_analyzer.py  settings.py  web_element_spider.py
core/agents/: __init__.py  api_hunter_agent.py  api_hunter_integration.py
core/mcp/: run_info.json
docs/: AUTOMATION_GUIDE.md  DATA_LOCATIONS_MAP.md  HOW_TO_BUILD_MCP_PLAYWRIGHT.md  SYSTEM_OVERVIEW.md  WORKFLOW_GUIDE.md
gui/: web_analyzer_gui.py
integrations/: __init__.py  mcp_playwright_integration.py  microsoft_mcp_integration.py
playwright-test/: package-lock.json  package.json
playwright_mcp_server/: package-lock.json
scripts/: crawl_analyze.py  get_qa_cookies.py  scrapy_integration.py  scrapy_run.py  working_crawler.py
test_analysis/: metadata.json
tests/: test_imports.py  test_qa_generator.py
